[gd_scene load_steps=4 format=3 uid="uid://b7q0660nl8s1m"]

[ext_resource type="Script" uid="uid://cidqoyfws4w3d" path="res://scripts/ui/user_interface.gd" id="1_ko1i8"]
[ext_resource type="PackedScene" uid="uid://cdhf1upltypbs" path="res://scenes/interface/inventory_ui.tscn" id="2_ko1i8"]
[ext_resource type="PackedScene" uid="uid://oteugmfxgmf" path="res://scenes/interface/stats_bars.tscn" id="2_tjcct"]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_ko1i8")

[node name="StatsBars" parent="." instance=ExtResource("2_tjcct")]
metadata/_edit_use_anchors_ = true

[node name="InventoryUI" parent="." instance=ExtResource("2_ko1i8")]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -30.0
offset_bottom = 30.0
grow_vertical = 2

[node name="TestLabels" type="MarginContainer" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -116.0
offset_right = 648.0
grow_vertical = 0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="TestLabels"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Panel1" type="Panel" parent="TestLabels/VBoxContainer"]
custom_minimum_size = Vector2(640, 24)
layout_mode = 2
size_flags_vertical = 3

[node name="TestLabel1" type="Label" parent="TestLabels/VBoxContainer/Panel1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = " TEST"
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="TestLabels/VBoxContainer"]
custom_minimum_size = Vector2(640, 24)
layout_mode = 2
size_flags_vertical = 3

[node name="TestLabel2" type="Label" parent="TestLabels/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = " TEST"
vertical_alignment = 1

[node name="Panel3" type="Panel" parent="TestLabels/VBoxContainer"]
custom_minimum_size = Vector2(640, 24)
layout_mode = 2
size_flags_vertical = 3

[node name="TestLabel3" type="Label" parent="TestLabels/VBoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = " TEST"
vertical_alignment = 1

[node name="Panel4" type="Panel" parent="TestLabels/VBoxContainer"]
custom_minimum_size = Vector2(640, 24)
layout_mode = 2
size_flags_vertical = 3

[node name="TestLabel4" type="Label" parent="TestLabels/VBoxContainer/Panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = " TEST"
vertical_alignment = 1
